--- a/portfolio.html
+++ b/portfolio.html
@@ -169,11 +169,12 @@
         <button class="box-filter__btn" type="button">Dizajn</button>
         <button class="box-filter__btn" type="button">Marketing</button>
       </div>
-      <div class="section">
-        <div class="project"">
+      <div class="section project">
+        <div class="project">
         <div class="project__item">
           <img class="project__image"
             src="./images/technocrack.jpg"
+            srcset="./images/technocrack@2x.jpg 2x"
             alt="Strona internetowa Technocrack"
             width="370"
             height="294"
@@ -188,6 +189,7 @@
         <div class="project__item">
           <img class="project__image"
             src="./images/new_orlean.jpg"
+            srcset="./images/new_orlean@2x.jpg 2x"
             alt="Dizajn Grafika New Orlean vs Golden Star"
             width="370"
             height="294"
@@ -201,6 +203,7 @@
         <div class="project__item">
           <img class="project__image"
             src="./images/restauracja_seafood.jpg"
+            srcset="./images/restauracja_seafood@2x.jpg 2x"
             alt="Aplikacja Reastauracja Seafood"
             width="370"
             height="294"
@@ -214,6 +217,7 @@
         <div class="project__item">
           <img class="project__image"
             src="./images/projekt_prime.jpg"
+            srcset="./images/projekt_prime@2x.jpg 2x"
             alt="Marketing Projekt Prime"
             width="370"
             height="294"
@@ -227,6 +231,7 @@
         <div class="project__item">
           <img class="project__image"
             src="./images/projekt_boxes.jpg"
+            srcset="./images/projekt_boxes@2x.jpg 2x"
             alt="Aplikacja Projekt Boxes"
             width="370"
             height="294"
@@ -240,6 +245,7 @@
         <div class="project__item">
           <img class="project__image"
             src="./images/inspiration.jpg"
+            srcset="./images/inspiration@2x.jpg 2x"
             alt="Strona Internetowa Inspiration has no Borders"
             width="370"
             height="294"
@@ -253,6 +259,7 @@
         <div class="project__item">
           <img class="project__image"
             src="./images/magazyn.jpg"
+            srcset="./images/magazyn@2x.jpg 2x"
             alt="Dizajn Magazyn Limited Edition"
             width="370"
             height="294"
@@ -266,6 +273,7 @@
         <div class="project__item">
           <img class="project__image"
             src="./images/projekt_lab.jpg"
+            srcset="./images/projekt_lab@2x.jpg 2x"
             alt="Marketing Projekt LAB"
             width="370"
             height="294"
@@ -279,6 +287,7 @@
         <div class="project__item">
           <img class="project__image"
             src="./images/growing_business.jpg"
+            srcset="./images/growing_business@2x.jpg 2x"
             alt="Aplikacja Growing Business"
             width="370"
             height="294"
