--- a/index.html
+++ b/index.html
@@ -261,8 +261,9 @@
           <h2 class="section__header section__header--bold">Nasz Zespół</h2>
           <ul class="box list">
             <li>
-              <img
+              <img class="team__img"
                 src="./images/Product_Designer.jpg"
+                srcset="./images/Product_Designer@2x.jpg 2x"
                 alt="Zdjęcie profilowe John Doe Product Designer"
                 width="270"
                 height="260"
@@ -293,9 +294,10 @@
               </div>
             </li>
             <li>
-              <img
-                src="./images/Frontend_Developer.jpg"
-                alt="Zdjęcie profilowe John Doe Frontend Developer"
+              <img class="team__img"
+              src="./images/Frontend_Developer.jpg"
+              srcset="./images/Frontend_Developer@2x.jpg 2x"
+              alt="Zdjęcie profilowe John Doe Frontend Developer"
                 width="270"
                 height="260"
               />
@@ -325,8 +327,9 @@
               </div>
             </li>
             <li>
-              <img
+              <img class="team__img"
                 src="./images/Marketing.jpg"
+                src="./images/Marketing@2x.jpg 2x"
                 alt="Zdjęcie profilowe John Doe Marketing"
                 width="270"
                 height="260"
@@ -357,8 +360,9 @@
               </div>
             </li>
             <li>
-              <img
+              <img class="team__img"
                 src="./images/UI_Designer.jpg"
+                src="./images/UI_Designer@2x.jpg 2x"
                 alt="Zdjęcie profilowe John Doe UI Designer"
                 width="270"
                 height="260"
@@ -491,7 +495,7 @@
             </a>
           </div>
         </div>
-        <form>
+        <form class="footer_newsletter">
           <div class="newsletter">
             <p class="footer__text footer__text--primary-color footer__text--uppercase footer__text--bold"">Zapisz się do newslettera</p>
             <label class="newsletter__label"><input
