--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" type="text/css"/>
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header class="page-header">
@@ -28,8 +28,8 @@
         >
           <svg
             class="m-menu__icon-close"
-            width="40"
-            height="40"
+            width="19"
+            height="19"
           >
             <use
               href="./images/icons.svg#icon-m-close"
@@ -138,8 +138,8 @@
           data-menu-open
         >
           <svg class="m-menu-btn__icon"
-            width="40"
-            height="40">
+            width="24"
+            height="16">
             <use href="./images/icons.svg#icon-m-menu"></use>
           </svg>
         </button>
@@ -294,13 +294,15 @@
               </div>
             </li>
             <li class="team__item">
+              <div class="team__img-box">
               <img class="team__img"
               src="./images/Frontend_Developer.jpg"
               srcset="./images/Frontend_Developer@2x.jpg 2x"
               alt="Zdjęcie profilowe John Doe Frontend Developer"
-                width="270"
-                height="260"
+                width=""
+                height=""
               />
+              </div>
               <h3 class="team__name">John Doe</h3>
               <p class="team__office">Frontend Developer</p>
               <div class="box__sm box__sm--margin">
@@ -515,7 +517,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal modal-hidden">
         <button type="button" class="modal__btn--close" data-modal-close>
-          <svg width="30" height="30">
+          <svg width="11" height="11">
             <use xlink:href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
