--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/main.min.css" type="text/css"/>
-    <title>Document</title>
+    <title>WebStudio - Portfolio</title>
   </head>
   <body>
     <header class="page-header">
@@ -28,8 +28,8 @@
         >
           <svg
             class="m-menu__icon-close"
-            width="40"
-            height="40"
+            width="19"
+            height="19"
           >
             <use
               href="./images/icons.svg#icon-m-close"
@@ -138,8 +138,8 @@
           data-menu-open
         >
           <svg class="m-menu-btn__icon"
-            width="40"
-            height="40">
+            width="24"
+            height="16">
             <use href="./images/icons.svg#icon-m-menu"></use>
           </svg>
         </button>
@@ -349,7 +349,7 @@
             </a>
           </div>
         </div>
-        <form>
+        <form class="footer__newsletter">
           <div class="newsletter">
             <p class="footer__text footer__text--primary-color footer__text--uppercase footer__text--bold"">Zapisz się do newslettera</p>
             <label class="newsletter__label"><input
