--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,7 @@
             >
           </li>
         </ul>
+        <div class="m-menu__list">
         <ul class="m-menu__list-contact">
           <li class="m-menu__list-contact-tel">
             <a
@@ -115,6 +116,7 @@
             >
           </li>
         </ul>
+        </div>
       </div>
     </div>
       <div class="page-width navigation navigation--bold">
